2008-04-01  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Tested against SF.net (CVS) repositories. Paths are
	correctly identified for those repositories.

	SVN not working yet due to an apparent bug in RepositoryHandler.

2008-03-31  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:
	* pycvsanaly2/extensions/Metrics.py:

	All the paths begin now with a /
	Metrics calculated so far: LOC, SLOC.
	Programming language also identified.

2008-03-12  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Database.py:

	Use datetime field instead of timestamp in scmlog table. Problem
	spotted by Santiago Dueñas. Fixes bug #401.
	
2008-03-11  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/DBContentHandler.py:
	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/ParserFactory.py:
	* pycvsanaly2/SVNParser.py:
	* pycvsanaly2/main.py:
	* pycvsanaly2/utils.py:

	Avoid unneeded string concatenations.
	
2008-03-11  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Database.py:
	* pycvsanaly2/utils.py:

	Fix utf-8 issues. Fixes bug #402.

2008-03-07  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Fixing two bugs.
	isinstance was millspelled when checking for MySQL.
	A local variable was not initialized if the table file_paths does
	not exist.

2008-03-07  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* README:

	Fixing email address in README file.

2008-03-04  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* setup.py:
	
	Added missed 'extensions' package into the setup file.

2008-03-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/Config.py:
	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/main.py:
	* pycvsanaly2/extensions/__init__.py:
	* pycvsanaly2/extensions/FilePaths.py:

	Extensions system.
	
2008-02-21  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
